refactor: Collectors.toList() -> stream().toList() 변경